--- a/base-lazy-days/client/package.json
+++ b/base-lazy-days/client/package.json
@@ -38,6 +38,7 @@
     "formik": "^2.2.6",
     "framer-motion": "^3.10.6",
     "image-webpack-loader": "^7.0.1",
+    "msw": "^1.2.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,7 +47,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "4.2.4",
+    "typescript": "^4.9.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
